@@ -3,24 +3,14 @@ import com.ishland.c2me.gradle.RedirectingOutputStream
 evaluationDependsOn(":tests")
 evaluationDependsOn(":tests:test-mod")
 
-sourceSets {
-    testmod {
-        compileClasspath += main.compileClasspath
-        runtimeClasspath += main.runtimeClasspath
-    }
-}
-
 loom {
     runs {
         testC2MEServer {
             server()
-            runDir getRootProject().getProjectDir().toPath().relativize(project.getBuildDir().toPath()).resolve("testServer").toString()
-            source sourceSets.testmod
+            runDir project.getProjectDir().toPath().relativize(project.getBuildDir().toPath()).resolve("testServer").toString()
             vmArgs "-Dc2me.base.config.override.ioSystem.replaceImpl=true",
                     "-Dc2me.base.config.override.asyncScheduling.enabled=true",
-                    "-Dcom.ishland.c2me.mixin.doAudit=true",
-                    "--add-modules",
-                    "jdk.incubator.vector"
+                    "-Dcom.ishland.c2me.mixin.doAudit=true"
             if (System.getenv("GITHUB_WORKFLOW") != null) {
                 if (System.getenv("RUNNER_OS").equals("macOS")) {
                     vmArgs "-Xmx11G"
@@ -46,8 +36,8 @@ afterEvaluate {
 }
 
 dependencies {
-    testmodImplementation project(":tests:test-mod").sourceSets.main.output
-    testmodImplementation project(":").sourceSets.main.output
+    runtimeOnly project(":tests:test-mod").sourceSets.main.output
+    runtimeOnly project(":").sourceSets.main.output
 }
 
 dependencies {
@@ -55,7 +45,7 @@ dependencies {
         (rootProject.subprojects - project(":tests")).forEach {
             if (it.parent != project(":")) return
 
-            testmodImplementation project(path: ":${it.name}", configuration: "namedElements")
+            runtimeOnly project(path: ":${it.name}", configuration: "namedElements")
         }
     }
 }
